// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input: SearchBar: [ prop: clearIcon ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        Object {
          "paddingRight": 50,
        },
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
  <[object Object]
    color="#071"
    name="clear"
    onPress={[Function]}
    size={16}
    style={
      Array [
        148,
        153,
        undefined,
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="#86939e"
    hidesWhenStopped={true}
    size="small"
    style={
      Array [
        149,
        undefined,
        Object {
          "right": 35,
        },
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      Object {
        "borderColor": "#071",
        "borderWidth": 5,
      },
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: icon ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#071"
    name="pets"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: inputStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        Object {
          "borderColor": "#071",
          "borderWidth": 5,
        },
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: lightTheme ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      147,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        151,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: loadingIcon ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        Object {
          "paddingRight": 30,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="#071"
    hidesWhenStopped={true}
    size="small"
    style={
      Array [
        149,
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: no props ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: noIcon ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        Object {
          "paddingLeft": 9,
        },
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`Input: SearchBar: [ prop: onChangeText ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    onChangeText={[Function]}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: onClearText ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    defaultValue="text to clear"
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        false,
        Object {
          "paddingRight": 30,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
  <[object Object]
    color="#86939e"
    name="clear"
    onPress={[Function]}
    size={16}
    style={
      Array [
        148,
        153,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: placeholder ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholder="placeholder"
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: placeholderTextColor ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholder="placeholder"
    placeholderTextColor="#071"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: round ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        Object {
          "borderRadius": 20,
        },
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="transparent"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Input: SearchBar: [ prop: underlineColorAndroid ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      146,
      false,
      undefined,
    ]
  }
>
  <TextInput
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    numberOfLines={2}
    placeholderTextColor="#86939e"
    secureTextEntry={false}
    style={
      Array [
        150,
        false,
        false,
        false,
        undefined,
        undefined,
        false,
      ]
    }
    underlineColorAndroid="#071"
  />
  <[object Object]
    color="#86939e"
    name="search"
    size={16}
    style={
      Array [
        148,
        152,
        undefined,
      ]
    }
  />
</View>
`;
